# monero-rust

./: .gitignore  .gitmodules  Cargo.toml  README.md  ROADMAP.txt  build.rs  monero-rust.h
dart/monero_extension/: .metadata  README.md  pubspec.yaml
dart/monero_extension/android/app/: build.gradle.kts
dart/monero_extension/ios/Runner/: Info.plist
dart/monero_extension/lib/: main.dart
dart/monero_extension/lib/screens/: keys_view.dart
dart/monero_extension/linux/: CMakeLists.txt
dart/monero_extension/native/hub/: Cargo.toml
dart/monero_extension/native/monero-wasm/: Cargo.toml
dart/monero_extension/native/monero-wasm/src/: lib.rs
dart/monero_extension/test/: widget_test.dart
dart/monero_extension/web/: manifest.json
examples/: sparse_scanning_demo.rs
flutter/extension/: package.json
flutter/extension/extension/: disable_service_worker.js
flutter/extension/lib/screens/: keys_view.dart
flutter/extension/macos/Runner.xcodeproj/: project.pbxproj
flutter/extension/windows/: CMakeLists.txt
flutter/extension/windows/runner/: Runner.rc  main.cpp
flutter/frb/: README.md  pubspec.yaml
flutter/frb/android/app/: build.gradle.kts
flutter/frb/extension/: disable_service_worker.js
flutter/frb/integration_test/: simple_test.dart
flutter/frb/ios/Runner/: Info.plist
flutter/frb/ios/Runner.xcodeproj/: project.pbxproj
flutter/frb/lib/: main.dart
flutter/frb/linux/: CMakeLists.txt
flutter/frb/linux/flutter/: generated_plugins.cmake
flutter/frb/linux/runner/: my_application.cc
flutter/frb/macos/Runner.xcodeproj/: project.pbxproj
flutter/frb/rust/: Cargo.toml
flutter/frb/rust_builder/: pubspec.yaml
flutter/frb/rust_builder/android/: build.gradle  settings.gradle
flutter/frb/rust_builder/ios/: rust_lib_frb.podspec
flutter/frb/rust_builder/linux/: CMakeLists.txt
flutter/frb/rust_builder/macos/: rust_lib_frb.podspec
flutter/frb/rust_builder/windows/: CMakeLists.txt
flutter/frb/tool/: build_extension.dart  build_ui.dart
flutter/frb/web/: index.html  manifest.json
flutter/frb/windows/: CMakeLists.txt
flutter/frb/windows/flutter/: generated_plugins.cmake
flutter/frb/windows/runner/: Runner.rc  main.cpp
flutter/rinf/: README.md  pubspec.yaml
flutter/rinf/lib/services/: extension_service.dart
flutter/rinf/lib/views/: debug_view.dart
flutter/rinf/test/: widget_test.dart
flutter/rinf/test/e2e/: extension.test.js
flutter/rinf/web/: extension_bridge.js
flutter/web/: Cargo.toml  README.md  package-lock.json  package.json
flutter/web/extension/: background.js  manifest.json
flutter/web/ios/Runner.xcodeproj/: project.pbxproj
flutter/web/lib/: main.dart
flutter/web/lib/models/: wallet_instance.dart  wallet_transaction.dart
flutter/web/lib/screens/: keys_view.dart
flutter/web/lib/services/: transaction_service.dart  wallet_persistence_service.dart  wallet_polling_service.dart  wallet_scan_service.dart  wallet_storage_service.dart
flutter/web/lib/utils/: clipboard_utils.dart  key_parser.dart  output_utils.dart  transaction_utils.dart
flutter/web/lib/views/: debug_view.dart
flutter/web/lib/widgets/: common_widgets.dart  keys_display_panel.dart  outputs_panel.dart  password_dialog.dart  save_wallet_dialog.dart  scanning_panel.dart  transactions_panel.dart  wallet_id_dialog.dart
flutter/web/linux/runner/: my_application.cc
flutter/web/native/hub/: Cargo.toml
flutter/web/native/hub/src/: encryption.rs  lib.rs  messages.rs
flutter/web/native/hub/src/actors/: mod.rs  storage.rs  sync.rs  tx_builder.rs  wallet.rs  wallet_test.rs
flutter/web/native/hub/src/signals/: mod.rs
flutter/web/native/hub/tests/: continuous_scan_integration_test.rs  mock_scanner.rs
flutter/web/native/monero-wasm/: Cargo.toml
flutter/web/native/monero-wasm/src/: lib.rs  scanner_native.rs  spent_checker.rs  tx_builder.rs  tx_proof.rs
flutter/web/native/monero-wasm/tests/: spent_detection_test.rs  wasm_rpc_test.rs
flutter/web/test/: scan_progress_test.dart  test_helpers.dart  widget_test.dart
flutter/web/test/e2e/: monero_operations.test.js
flutter/web/test/models/: wallet_transaction_test.dart
flutter/web/test/utils/: transaction_utils_test.dart
flutter/web/tool/: build_extension.dart  build_ui.dart
flutter/web/web/: index.html
monero-rust/: Cargo.toml
monero-rust/src/: lib.rs
monero-rust/tests/: integration_tests.rs
rust/: Cargo.toml
rust/monero-rust/: Cargo.toml  README.md
rust/monero-rust/src/: abstractions.rs  lib.rs  main.rs  native_impl.rs  rpc_serai.rs  scanner.rs  tx_builder.rs  tx_proof.rs  wasm_impl.rs
rust/monero-rust/tests/: debug_rpc.rs  e2e_scan_detect_output_test.rs  honked_bagpipe_tx.rs  local_stagenet_test.rs  mock_rpc.rs  multi_wallet_scan_test.rs  scan_test.rs
rust/monero-serai-mirror/: Cargo.toml
rust/monero-serai-mirror/generators/: Cargo.toml
rust/monero-serai-mirror/src/: lib.rs  rpc.rs  transaction.rs
rust/monero-serai-mirror/src/tests/: seed.rs
rust/monero-serai-mirror/src/wallet/: decoys.rs  mod.rs  scan.rs
rust/monero-wasm/: Cargo.toml
rust/monero-wasm/src/: abstractions.rs  lib.rs  scanner.rs  tx_builder.rs  wasm_impl.rs
rust/monero-wasm/tests/: honked_bagpipe_scan_test.rs  rpc_connectivity_test.rs
rust/monero-wasm/tests/vectors/: honked_bagpipe_rpc.json
src/: crypto.rs  decoy_selection.rs  dyn_rpc.rs  fee_calculation.rs  input_selection.rs  lib.rs  main.rs  mock_rpc.rs  rpc.rs  signing.rs  transaction_builder.rs  types.rs  wallet_state.rs
tests/: crypto_tests.rs  daemon_connection_tests.rs  ffi_getter_tests.rs  honked_bagpipe_test.rs  honked_bagpipe_tx.rs  integration_scanning_test.rs  key_image_export_import_tests.rs  key_image_tests.rs  lib_tests.rs  monero_wallet_cli_compatibility_test.rs  rpc_tests.rs  signing_tests.rs  test_helpers.rs  transaction_broadcast_integration_test.rs  transaction_builder_tests.rs  types_tests.rs  wallet_state_tests.rs  wallet_state_unit_tests.rs
tests/vectors/: honked_bagpipe_tx_vectors.json  integration_scanning_rpc.json  stagenet_key_images.monero-wallet-cli  subaddress_key_images.monero-wallet-cli
(+29 files in other folders)
