[package]
name = "monero-rust"
version = "0.0.4-dev.1"
edition = "2021"
description = "Monero in Rust.  A command-line interface and SDK."
repository = "https://github.com/ManyMath/monero-rust"
license = "MIT"

[[bin]]
name = "monero_rust"
path = "src/main.rs"

[lib]
name = "monero_rust"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
monero-oxide = { path = "vendored/monero-oxide/monero-oxide", default-features = false }
monero-wallet = { path = "vendored/monero-oxide/monero-oxide/wallet", default-features = false, features = ["std"] }
# Simple HTTP RPC client compatible with monero-oxide Rpc trait (used by examples/tests).
monero_simple_request_rpc = { package = "monero-simple-request-rpc", path = "vendored/monero-oxide/monero-oxide/rpc/simple-request", default-features = false }
monero-rpc = { path = "vendored/monero-oxide/monero-oxide/rpc", default-features = false, features = ["std"] }
monero-generators = { path = "vendored/monero-oxide/monero-oxide/generators", default-features = false }
rand_core = "0.6.4"
rand = "0.8"
zeroize = "1.6.0"
curve25519-dalek = { version = "4", default-features = false, features = ["alloc", "zeroize", "group"] }
sha3 = "0.10.8"
hex = "0.4.3"
tokio = { version = "1.29.1", features = ["full"] }

# Seed/mnemonic support via vendored monero-seed.
monero-seed = { path = "vendored/monero-wallet-util/seed", default-features = false }

# Serialization support
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Encryption support for wallet state
aes-gcm = "0.10"
argon2 = "0.5"
chacha20 = "0.9"
cuprate-cryptonight = { path = "vendored/cuprate-cryptonight" }
subtle = "2.5"
urlencoding = "2.1"

[build-dependencies]
cbindgen = "0.24.0"

[dev-dependencies]
tempfile = "3.8"
