[package]
name = "monero-rust"
version = "0.0.4"
edition = "2021"

[features]
default = []
test-helpers = []

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2.100"
getrandom = { version = "0.2", features = ["js"] }
thiserror = "1.0"
async-trait = "0.1"
futures = "0.3"
base64 = "0.21"
zeroize = "1.7"
base58-monero = { version = "1", default-features = false, features = ["check"] }

# Scanner
curve25519-dalek = { version = "3.2", default-features = false }
sha3 = { version = "0.10", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
rand_core = { version = "0.6", default-features = false }
rand = { version = "0.8", default-features = false, features = ["getrandom"] }
js-sys = "0.3"

# WASM
[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window", "Storage", "Request", "RequestInit", "RequestMode", "RequestCredentials", "Response", "Headers", "console"] }
wasm-bindgen-futures = "0.4"
gloo-timers = { version = "0.3", features = ["futures"] }
monero-serai = { path = "../monero-serai-mirror", default-features = false, features = ["test-helpers"] }

# Native
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
monero-serai = { path = "../monero-serai-mirror", features = ["http-rpc", "test-helpers"] }
curve25519-dalek = { version = "3.2", features = ["std"] }
sha3 = "0.10"
hex = "0.4"
rand_core = "0.6"
rand = "0.8"
tokio = { version = "1.29", features = ["rt", "macros"] }

[dev-dependencies]
monero-serai = { path = "../monero-serai-mirror", features = ["http-rpc", "test-helpers"] }

# Tokio is only needed for native tests
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1.29", features = ["full"] }
