[package]
name = "monero-wasm"
version = "0.0.1"
edition = "2021"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
wasm-bindgen = "0.2.100"
getrandom = { version = "0.2", features = ["js"] }

monero-serai = { git = "https://github.com/serai-dex/serai", rev = "fca567f6" }
curve25519-dalek = { version = "^3.2", features = ["std"] }
sha3 = "0.10"
hex = "0.4"
zeroize = { version = "^1.5", features = ["zeroize_derive"] }
rand_core = "0.6"
rand = "0.8"
