[package]
# Do not change the name of this crate.
name = "hub"
version = "0.1.0"
edition = "2024"

[lib]
# `lib` is required for non-library targets,
# such as tests and benchmarks.
# `cdylib` is for Linux, Android, Windows, and web.
# `staticlib` is for iOS and macOS.
crate-type = ["lib", "cdylib", "staticlib"]

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
wildcard_imports = "deny"

[dependencies]
rinf = "8.8.1"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.0", features = ["rt", "macros", "time"] }
async-trait = "0.1.87"
messages = "0.3.1"
monero-rust = { path = "../../../../rust/monero-rust" }

# Encryption dependencies
chacha20poly1305 = "0.10"
argon2 = "0.5"
rand = "0.8"
base64 = "0.22"
serde_json = "1.0"
zeroize = "1.8"

# Uncomment below to target the web.
tokio_with_wasm = { version = "0.8.5", features = ["rt", "macros", "time"] }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["console", "Storage", "Window"] }
