[package]
name = "monero-wasm"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
wasm-bindgen = "0.2.100"
getrandom = { version = "0.2", features = ["js"] }
curve25519-dalek = { version = "^3.2", default-features = false }
sha3 = { version = "0.10", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
zeroize = { version = "^1.5", default-features = false, features = ["zeroize_derive"] }
rand_core = { version = "0.6", default-features = false }
rand = { version = "0.8", default-features = false, features = ["getrandom"] }
async-trait = "0.1"
futures = "0.3"
serde_json = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
monero-serai = { path = "../../../../rust/monero-serai-mirror", default-features = false, features = ["test-helpers"] }
web-sys = { version = "0.3", features = [
    "Window",
    "Request",
    "RequestInit",
    "RequestMode",
    "RequestCredentials",
    "Response",
    "Headers",
    "console",
] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
monero-serai = { path = "../../../../rust/monero-serai-mirror", features = ["http-rpc", "test-helpers"] }
curve25519-dalek = { version = "^3.2", features = ["std"] }
sha3 = "0.10"
hex = "0.4"
zeroize = { version = "^1.5", features = ["zeroize_derive"] }
rand_core = "0.6"
rand = "0.8"

[dev-dependencies]
wasm-bindgen-test = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
